--- a/src/App.css
+++ b/src/App.css
@@ -2298,9 +2298,7 @@
     min-width: 0;
     width: 100%;
     min-height: 38px;
-    height: 48px;
-    align-items: center;
-    justify-content: center;
+    white-space: nowrap;
   }
 
   .chart-wrapper.full-bleed {
